--- a/addidas-clone/HTML CSS/index.html
+++ b/addidas-clone/HTML CSS/index.html
@@ -3,10 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Addidas</title>
+    <title>Adidas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <header>
+        <div class="top-header">
+            <h4>Stock up with 30% OFF</h4>
+            <i class="ri-arrow-down-s-line"></i>
+        </div>
+        <div class="bottom-header">
+            <div class="top-nav-links">
+                <ul>
+                    <li><a href="#help">help</a></li>
+                    <li><a href="#orders">order and returns</a></li>
+                    <li><a href="#gift">gift cards</a></li>
+                    <li><a href="#adiclub">join adiClub</a></li>
+                </ul>
+            </div>
+            <nav>
+                <!-- hamburger (mobile only) -->
+                <div class="hamburger">
+                    <i class="ri-menu-line"></i>
+                </div>
+
+                <div class="logo">
+                    <img src="assets/images/logo.jpg" alt="adidas logo">
+                </div>
+
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="#men">Men</a></li>
+                        <li><a href="#women">Women</a></li>
+                        <li><a href="#kids">Kids</a></li>
+                        <li><a href="#sports">Sports</a></li>
+                        <li><a href="#sale">Sale</a></li>
+                        <li><a href="#trending">New & Trending</a></li>
+                    </ul>
+                </div>
+
+                <div class="icons">
+                    <div class="search">
+                        <h4>Search</h4>
+                        <i class="ri-search-line"></i>
+                    </div>
+                    <div class="icon-section">
+                        <i class="ri-user-line"></i>
+                        <i class="ri-heart-line"></i>
+                        <i class="ri-shopping-bag-line"></i>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
