--- a/addidas-clone/HTML CSS/index.html
+++ b/addidas-clone/HTML CSS/index.html
@@ -56,5 +56,14 @@
             </nav>
         </div>
     </header>
+
+        <!---------------------------------- HERO SECTION ---------------------------------------------->
+
+    <section>
+        <div class="hero-section-image">
+            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto:best,fl_lossy/if_w_gt_1920,w_1920/global_ss26_adizero_evo_sl_running_ss26_launch_evo_sl_launch_hp_banner_hero_1_d_90af36fe65.jpg" alt="A group of people, likely athletes, are walking together on a paved surface, wearing athletic clothing and shoes." loading="eager" fetchpriority="high">
+        </div>
+    </section>
+
 </body>
 </html>
