style: changed the color and removed hover in the feedback button

--- a/addidas-clone/TAILWIND/index.html
+++ b/addidas-clone/TAILWIND/index.html
@@ -90,7 +90,7 @@
         <div class="absolute bottom-24 left-16">
 
             <!-- title -->
-            <h2 class="text-xl font-black tracking-wider bg-white px-2 py-1 inline-block mb-2">ADIZERO EVO SL</h2>
+            <h2 class="text-xl font-black bg-white px-4 py-2 inline-block mb-2">ADIZERO EVO SL</h2>
             
             <!-- subtitle -->
             <p class="text-black text-sm font-medium bg-white px-2 py-1 mb-4">Feel Fast in all aspects of life.</p>
@@ -108,8 +108,8 @@
         </div>
 
         <!-- feedback tab - right side -->
-        <div class="absolute top-1/3 -translate-y-1/2 right-0 bg-white border border-gray-300 px-2 py-4 cursor-pointer hover:bg-gray-100">
-            <span class="text-sm text-green-800 font-bold tracking-widest" style="writing-mode: vertical-rl; transform: rotate(180deg)">FEEDBACK</span>
+        <div class="absolute top-1/3 -translate-y-1/2 right-0 bg-green-50 border border-gray-300 px-2 py-4 cursor-pointer">
+            <span class="text-sm text-green-950 font-bold tracking-widest" style="writing-mode: vertical-rl; transform: rotate(180deg)">FEEDBACK</span>
         </div>
 
     </section>
